@@ -970,6 +970,7 @@ val
 [#f (char<? #\c #\b)]
 [(1 2 3 . 4) (cons* 1 2 3 4)]
 [1 (cons* 1)]
+[(1 . 3) (receive (x y) (car+cdr '(1 . 3)) (cons x y))]
 
 ;; ["syntax error: malformed when"
 ;;  (print (guard (con
